# corebodytemp

./: .gitignore  README.md  pyproject.toml
corebodytemp/: __init__.py  corebodytemp.py  datatypes.py
examples/: main.py
